<resources>
    <string name="app_name">vooraad</string>
    <string name="please_scan">Please scan your barcode</string>
    <string name="brand">Brand</string>
    <string name="product">Product</string>
    <string name="barcode">Barcode</string>
    <string name="product_image">Product Image</string>
    <string name="type">Type</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="search_title">search</string>
    <string name="search_hint">Type productname here...</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="no_products_available">No products available</string>
</resources>